@@ -226,7 +226,7 @@ namespace eval ::tkchat {
     variable chatWindowTitle "The Tcler's Chat"
 
     variable HEADUrl {http://tcllib.cvs.sourceforge.net/*checkout*/tcllib/tclapps/apps/tkchat/tkchat.tcl?revision=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.423 2008/04/07 15:12:35 patthoyts Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.424 2008/04/17 20:54:38 patthoyts Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -5960,122 +5960,94 @@ proc ::tkchat::setNickname { nick } {
 
 
 # -------------------------------------------------------------------------
-#
 # routines for cloning of chat window adapted from http://wiki.tcl.tk/9167
 #
 
-proc ::tkchat::textClone {text clone} {
-    #
-    # clone the contents of a text widget into another text widget
-    #
-    # text -> path to text widget containing clone source
-    # clone -> path to text widget for cloned content
-    #
-    ::tkchat::textRestore $clone [::tkchat::textSave $text]
+proc ::tkchat::textClone {src dst} {
+    ::tkchat::textRestore $dst [::tkchat::textSave $src]
 }
 
-
+# serialize text widget contents (data, tags, images etc)
 proc ::tkchat::textSave {w} {
-    #
-    # serialize a text widgets contents
-    #
-    # w -> path to a text widget to serialize
-    #
-    # Returns: serialized text widget content
-    #
-
-    # the resulting string:
     set save {}
-    # get the state of the widget:
     set dump [$w dump -mark 1.0 end]
     append dump " "
     append dump [$w dump -all 1.0 {end -1 ch}]
     # add more details:
     foreach {key value index} $dump {
 	switch $key {
-	  image {
-	    # add attributes of an image:
-	    set exec "\$w image create $index"
-	    foreach k {-align -image -name -padx -pady} {
-              set v [$w image cget $index $k]
-              if {$v != ""} {append exec " $k \{$v\}"}
-	    }
-	    lappend save exec $exec {}
-	  }
-	  mark {
-	    # add attributes of a mark:
-	    lappend save $key $value $index
-	    set exec "$w mark gravity $value [$w mark gravity $value]"
-	    lappend save exec $exec {}
-	  }
-	  tagoff {
-	    # add attributes of a tag:
-	    set exec "\$w tag configure {$value}"
-	    set keys {}
-	    lappend keys -background -bgstipple -borderwidth -elide -fgstipple
-	    lappend keys -font -foreground -justify -lmargin1 -lmargin2 -offset
-	    lappend keys -overstrike -relief -rmargin -spacing1 -spacing2
-	    lappend keys -spacing3 -tabs -underline -wrap
-	    foreach k $keys {
-              set v [$w tag cget $value $k]
-              if {$v != ""} {append exec " $k \{$v\}"}
-	    }
-	    lappend save exec $exec {}
-	    lappend save $key $value $index
-	  }
-	  window {
-	    # add attributes of a window:
-	    lappend save $key $value $index
-	    set exec "$w window configure $index"
-	    foreach k {-align -create -padx -pady -stretch}  {
-              set v [$w window cget $index $k]
-              if {$v != ""} {append exec " $k \{$v\}"}
-	    }
-	    lappend save exec $exec {}
-	  }
-	  default {
-	    lappend save $key $value $index
-	  }
+            image {
+                # add attributes of an image:
+                set exec [list image create $index]
+                foreach k {-align -image -name -padx -pady} {
+                    set v [$w image cget $index $k]
+                    if {$v != ""} {lappend exec $k $v}
+                }
+                lappend save exec $exec {}
+            }
+            mark {
+                # add attributes of a mark:
+                lappend save $key $value $index
+                set exec [list mark gravity $value [$w mark gravity $value]]
+                lappend save exec $exec {}
+            }
+            tagoff {
+                # add attributes of a tag:
+                set exec [list tag configure [list $value]]
+                set keys {}
+                lappend keys -background -bgstipple -borderwidth -elide -fgstipple
+                lappend keys -font -foreground -justify -lmargin1 -lmargin2 -offset
+                lappend keys -overstrike -relief -rmargin -spacing1 -spacing2
+                lappend keys -spacing3 -tabs -underline -wrap
+                foreach k $keys {
+                    set v [$w tag cget $value $k]
+                    if {$v != ""} {lappend exec $k $v}
+                }
+                lappend save exec $exec {}
+                lappend save $key $value $index
+            }
+            window {
+                # add attributes of a window:
+                lappend save $key $value $index
+                set exec [list window configure $index]
+                foreach k {-align -create -padx -pady -stretch}  {
+                    set v [$w window cget $index $k]
+                    if {$v != ""} {lappend exec $k $v}
+                }
+                lappend save exec $exec {}
+            }
+            default {
+                lappend save $key $value $index
+            }
 	}
     }
-    # return the serialized widget:
     return $save
 }
 
-
+# restore serialized data into a text widget
 proc tkchat::textRestore {w save} {
-    #
-    # fill a text widget with content
-    # from a serialization
-    #
-    # w -> path to a text widget
-    # save -> content of a text widget as serialized string
-    #
-    
-    # empty the text widget:
     $w delete 1.0 end
     # create items, restoring their attributes:
     foreach {key value index} $save {
 	switch $key {
-	    exec    {eval $value}
+	    exec    {eval $w $value}
 	    image   {$w image create $index -name $value}
 	    text    {$w insert $index $value}
 	    mark    {
-	      if {$value == "current"} {set current $index}
-	      $w mark set $value $index
+                if {$value == "current"} {set current $index}
+                $w mark set $value $index
 	    }
 	    tagon   {set tag($value) $index}
 	    tagoff  {
-	      $w tag add $value $tag($value) $index
-	      # this line is special to tkchat:
-	      if {[string match URL-* $value]} {
-	          $w tag bind $value <Button-1> [list ::tkchat::gotoURL [$w get $value.first $value.last]]
-	      }
+                $w tag add $value $tag($value) $index
+                # this line is special to tkchat:
+                if {[string match URL-* $value]} {
+                    $w tag bind $value <Button-1> [list ::tkchat::gotoURL [$w get $value.first $value.last]]
+                }
 	    }
 	    window  {$w window create $index -window $value}
 	}
     }
-    # restore the "current" index:
     $w mark set current $current
 }
 
