@@ -1,3 +1,9 @@
+2008-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Proper quoting when cloning text widget data. We
+	must use [list]/[lappend] to serialize the data else rogue braces
+	can break the de-serialization.
+
 2008-04-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:       Applied patch #1935658 from Sergei Gavrikov to
